Fri Oct 18 19:03:50 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/pool/util.c src/tds/iconv.c src/tds/read.c:
	- fix some warnings compiling with -Wall (some was error)

Fri Oct 18 12:14:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Pass additional macro definitions in CPPFLAGS instead of CFLAGS.

Fri Oct 18 11:31:39 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/tds/threadsafe.c:
	- Properly initialize hostent_data structures.
	- Wrap use of these structures in sethostent_r()/endhostent_r() 
	  for safety.

Fri Oct 18 14:59:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml src/odbc/connectparams.c src/odbc/odbc.c:
	- added SQLSetConnectAttr function
	- added some DSN configuration options

Fri Oct 18 11:32:40 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml include/tds.h include/tdsstring.h:
	* src/odbc/connectparams.c src/odbc/connectparams.h:
	* src/odbc/odbc.c src/tds/config.c src/tds/mem.c:
	* src/tds/tdsstring.c:
	- ODBC: implemented DSNless and freetds.conf'less connections

Fri Oct 18 00:35:48 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsstring.h src/tds/config.c src/tds/login.c:
	* src/tds/mem.c:
	- more consistency in TDSCONNECTINFO

Thu Oct 17 22:44:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/dblib.c src/odbc/odbc.c src/pool/member.c:
	* src/tds/config.c src/tds/login.c src/tds/unittests/common.c:
	- tds_connect accept a TDSCONNECTINFO instead of TDSLOGIN

Thu Oct 17 22:44:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tds_configs.h include/tdsutil.h:
	* src/tds/config.c src/tds/login.c src/tds/mem.c:
	- renamed TDSCONFIGINFO to TDSCONNECTINFO

Thu Oct 17 16:31:56 EDT 2002    nsc <Nicholas_Castellano@acml.com>
	* doc/faq.html: