@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.66 2002/10/18 16:15:55 castellano Exp $
+dnl $Id: configure.in,v 1.67 2002/10/18 17:20:10 castellano Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -282,7 +282,6 @@ dnl ------------------------------------------------------------
 dnl Final output
 dnl ------------------------------------------------------------
 AC_OUTPUT(include/tdsver.h \
-	include/tds_sysdep_private.h \
 	include/tds_sysdep_public.h \
 	Makefile \
 	include/Makefile \
